force-app/main/default/objects/ZRH_Convenio__c/ZRH_Convenio__c.object-meta.xml
<CustomObject>
    <label>Convenio</label>
    <nameField>
        <label>Descripción</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Convenios</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>