force-app/main/default/objects/ZRH_Convenio__c/fields/ZRH_CodigoDeTipoDeContrato__c.field-meta.xml
<CustomField>
    <fullName>ZRH_CodigoDeTipoDeContrato__c</fullName>
    <label>Código de Tipo de Contrato</label>
    <length>1</length>
    <required>true</required>
    <type>Text</type>
</CustomField>