force-app/main/default/objects/ZRH_Convenio__c/fields/ZRH_CodigoEstadoCNV__c.field-meta.xml
<CustomField>
    <fullName>ZRH_CodigoEstadoCNV__c</fullName>
    <label>Código Estado CNV</label>
    <length>255</length>
    <type>Text</type>
</CustomField>