force-app/main/default/objects/ZRH_Convenio__c/fields/ZRH_CodigoTipoInstitucion__c.field-meta.xml
<CustomField>
    <fullName>ZRH_CodigoTipoInstitucion__c</fullName>
    <label>Código Tipo Institución</label>
    <length>1</length>
    <type>Text</type>
</CustomField>