force-app/main/default/objects/ZRH_Convenio__c/fields/ZRH_CodigoTxt__c.field-meta.xml
<CustomField>
    <fullName>ZRH_CodigoTxt__c</fullName>
    <formula>TEXT(ZRH_Codigo__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Código Texto</label>
    <type>Text</type>
</CustomField>