force-app/main/default/objects/ZRH_Convenio__c/fields/ZRH_DescripcionEstadoCNV__c.field-meta.xml
<CustomField>
    <fullName>ZRH_DescripcionEstadoCNV__c</fullName>
    <label>Descripción Estado CNV</label>
    <length>255</length>
    <type>Text</type>
</CustomField>