force-app/main/default/objects/ZRH_Convenio__c/fields/ZRH_DescripcionTipoDeInstitucion__c.field-meta.xml
<CustomField>
    <fullName>ZRH_DescripcionTipoDeInstitucion__c</fullName>
    <label>Descripción Tipo de Institución</label>
    <length>255</length>
    <type>Text</type>
</CustomField>