force-app/main/default/objects/ZRH_Convenio__c/fields/ZRH_FechaDeVigenciaInicial__c.field-meta.xml
<CustomField>
    <fullName>ZRH_FechaDeVigenciaInicial__c</fullName>
    <label>Fecha de Vigencia Inicial</label>
    <required>true</required>
    <type>Date</type>
</CustomField>