force-app/main/default/objects/ZRH_Convenio__c/fields/ZRH_NombreEmpresa__c.field-meta.xml
<CustomField>
    <fullName>ZRH_NombreEmpresa__c</fullName>
    <label>Nombre Empresa</label>
    <length>255</length>
    <type>Text</type>
</CustomField>