force-app/main/default/objects/ZRH_Convenio__c/fields/ZRH_TipoDeContrato__c.field-meta.xml
<CustomField>
    <fullName>ZRH_TipoDeContrato__c</fullName>
    <label>Tipo de Contrato</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
</CustomField>