force-app/main/default/objects/ZRH_Convenio__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>ZRH_Codigo__c</columns>
    <columns>ZRH_CodigoDeTipoDeContrato__c</columns>
    <columns>ZRH_TipoDeContrato__c</columns>
    <columns>ZRH_FechaDeVigenciaInicial__c</columns>
    <filterScope>Everything</filterScope>
    <label>Todos los Convenios</label>
</ListView>